--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,3 +22,15 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+ }
+
+ .img {
+  width: 90%;
+  height: 100%;
+  object-fit: cover;
+ }
